--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
-									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -95,7 +95,7 @@
 					<ul class="info">
 						<li><span class="first-block">Full Name:</span><span class="second-block">RAMAHAFENOSOA Fiderana Ny Avo</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+ 261328395341</span></li>
-						<li><span class="first-block">Email:</span><span class="second-block">fiderananyavoramahafenosoa@gmail.com</span></li>
+						<!-- <li><span class="first-block">Email:</span><span class="second-block">fiderananyavoramahafenosoa@gmail.com</span></li> -->
 						<li><span class="first-block">Address:</span><span class="second-block">Antananarivo Madagascar, 101</span></li>
 					</ul>
 				</div>
