--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<h3><span>Web Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="#"><i class="icon-facebook2"></i></a></li>
+									<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa"><i class="icon-facebook2"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 								</ul>
 							</p>
@@ -101,12 +101,13 @@
 				</div>
 				<div class="col-md-8">
 					<h2>Hello There!</h2>
-					<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-					<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+					<p>I'm RAMAHAFENOSOA Fiderana Ny Avo, a passionate developer specializing in Shopify and WordPress. With a year of dedicated experience in the frontend and ecommerce development landscape, I bring creativity and technical expertise to every project.</p>
+					<p>Specializing in Shopify and WordPress, I've cultivated a deep understanding of ecommerce intricacies. My journey involves not just writing code but crafting digital storefronts that elevate the shopping experience.</p>
+					<p>Explore my portfolio to witness my experiences. If you're seeking a developer who not only codes but understands the nuances of online commerce, let's connect. Together, we can bring your project vision to fruition!</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa"><i class="icon-facebook3"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206/"><i class="icon-linkedin2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -131,11 +132,12 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
+									<h3 class="timeline-title">
+										Ingénieur d'études en développement web</h3>
+									<span class="company">VIVETIC - Aug 2022 - Present</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
 								</div>
 							</div>
 						</li>
@@ -143,23 +145,11 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Junior Developer</h3>
-									<span class="company">Company Name - 2013 - 2015</span>
+									<h3 class="timeline-title">Wordpress Developer (Internship)</h3>
+									<span class="company">French Tech Antananarivo May 2022 - Jul 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Integrated into the development of a website visible to the tech public, responsible for ergonomics, WordPress development, graphic design and integration.</p>
 								</div>
 							</div>
 						</li>
@@ -168,27 +158,16 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
-						<li class="timeline-inverted animate-box">
-							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Name - 2007 - 2009</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-								</div>
-							</div>
-						</li>
+						</li> -->
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
-									<span class="company">University Name - 2002 - 2006</span>
+									<h3 class="timeline-title">Bachelor's degree</h3>
+									<span class="company">ISPM - 2022 - 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>In the process of completing the 3rd year at ISPM (Institut Supérieur Polytechnique de Madagascar) of Multimedia, Information Technology Communication and Artificial Intelligence.</p>
 								</div>
 							</div>
 						</li>
@@ -196,15 +175,39 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Diploma Course</h3>
-									<span class="company">College Name - 1999 - 2001</span>
+									<h3 class="timeline-title">UX&UI Design</h3>
+									<span class="company">Orange Digital Center Madagascar - April 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+									<p>Skills and knowledge required in the fundamentals of UX and UI design.</p>
 								</div>
 							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Intro to design</h3>
+									<span class="company">Orange Digital Center Madagascar - March 2022</span>
+								</div>
+								<div class="timeline-body">
+									<p>Skills and knowledge required in the fundamentals of graphic design.</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Marketing Digital</h3>
+									<span class="company">Orange Digital Center Madagascar - March 2022</span>
+								</div>
+								<div class="timeline-body">
+									<p>Skills and knowledge required in the fundamentals of digital marketing.</p>
+								</div>
+							</div>
+						</li>
+						<!-- <li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -215,7 +218,7 @@
 									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 								</div>
 							</div>
-						</li>
+						</li> -->
 			    	</ul>
 				</div>
 			</div>
