--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 							<h3><span>Web Developer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa"><i class="icon-facebook2"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206/" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa" target="_blank"><img src="images/facebook.png" alt="facebook" width="60px"></a></li>
+									<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206" target="_blank"><img src="images/linkedin.png" alt="linkedin" width="60px"></a></li>
+									<li><a href="https://github.com/RAMAHAFENOSOA" target="_blank"><img src="images/github.png" alt="github" width="60px"></a></li>
 								</ul>
 							</p>
 						</div>
@@ -106,8 +107,8 @@
 					<p>Explore my portfolio to witness my experiences. If you're seeking a developer who not only codes but understands the nuances of online commerce, let's connect. Together, we can bring your project vision to fruition!</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa"><i class="icon-facebook3"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206/"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa" target="_blank"><img src="images/facebook.png" alt="facebook" width="60px"></a></li>
+							<li><a href="https://www.linkedin.com/in/fiderana-ny-avo-ramahafenosoa-583a28206" target="_blank"><img src="images/linkedin.png" alt="linkedin" width="60px"></a></li>
 						</ul>
 					</p>
 				</div>
@@ -323,37 +324,10 @@
 					<h2>Skills</h2>
 				</div>
 			</div>
-			<div class="row row-pb-md">
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
-				</div>
-
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
-				</div>
-			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
+						<h3><span class="name-left"><img src="images/shopify.png" alt="shopify" width="60px">Shopify</span><span class="value-right">95%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -361,7 +335,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
+						<h3><span class="name-left"><img src="images/liquid.png" alt="liquid" width="60px">Liquid</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
