--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left"><img src="images/shopify.png" alt="shopify" width="60px">Shopify</span><span class="value-right">95%</span></h3>
+						<h3><img src="images/shopify.png" alt="shopify" width="60px"><br><span class="name-left">Shopify</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -335,7 +335,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left"><img src="images/liquid.png" alt="liquid" width="60px">Liquid</span></h3>
+						<h3><img src="images/liquid.png" alt="liquid" width="60px"><br><span class="name-left">Liquid</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -343,7 +343,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+						<h3><img src="images/php.png" alt="php" width="60px"><br><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -351,7 +351,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+						<h3><img src="images/JS.png" alt="liquid" width="60px"><br><span class="name-left">HTML5</span><span class="value-right">85%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
