--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Fiderana Ny Avo R.</title>
+	<link rel="icon" type="image/x-icon" href="/images/Letter F Yellow_Green.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio RAMAHAFENOSOA Fiderana Ny Avo" />
 	<meta name="keywords" content="website templates, html5, bootstrap, css3, mobile first, responsive" />
