shooot!:speech_balloon:

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Shoot me a message</h2>
+					<h2>Shoot me a message !</h2>
 					<p>Ready to switch from chat to pixels? Don't be shy, text me and let's transform your idea into vibrant online realities	!</p>
 					<a href="mailto:fiderananyavoramahafenosoa@gmail.com"><img src="images/Gmail.png" alt="" srcset="" width="60px"></a>
 				</div>
