--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/willemsefrance.png);">
+					<a href="https://www.willemsefrance.fr/" class="work" style="background-image: url(images/willemsefrance.png);">
 						<div class="desc">
 							<h3>Willemse France</h3>
 							<span>In charge of updating the Shopify theme and implementing custom developments for an enhanced user experience.</span>
@@ -392,7 +392,7 @@
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/bakker.jfif);">
+					<a href="https://fr-fr.bakker.com/" class="work" style="background-image: url(images/bakker.jfif);">
 						<div class="desc">
 							<h3>Bakker (International)</h3>
 							<span>In charge of updating the Shopify theme and implementing custom developments for an enhanced user experience.</span>
