--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 					<a href="https://www.florimon.com/" class="work" style="background-image: url(images/florimon.PNG);">
 						<div class="desc">
 							<h3>Florimon</h3>
-							<span>I was in charge of the complete frontend redesign of the website, working to enhance its design and features for an optimized user experience.</span>
+							<span>I was in charge of the complete frontend redesign of the website especially considering the migration from Oxatis to Shopify, working to enhance its design and features for an optimized user experience.</span>
 						</div>
 					</a>
 				</div>
