:lipstick: new_content

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="icon" type="image/x-icon" href="/images/Letter F Yellow_Green.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Portfolio RAMAHAFENOSOA Fiderana Ny Avo" />
-	<meta name="keywords" content="website templates, html5, bootstrap, css3, mobile first, responsive" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="keywords" content="portfolio, web design, front-end development, graphic design, projects">
+	<meta name="author" content="Fiderana Ny Avo R." />
 
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -132,6 +132,20 @@
 							<div class="timeline-badge"><img src="images/Crown_Blue.png" alt="" srcset="" width="60px"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
+									<h3 class="timeline-title">Professional integration</h3>
+									<span class="company">Orange Digital Center's diverse programs.</span>
+								</div>
+								<div class="timeline-body">
+									<p>Watch his entire journey unfold in this video, showcasing the comprehensive path he took with Orange Digital Center's diverse programs, spanning from training to professional integration."</p>
+									<br>
+									<iframe width="100%" height="300" src="https://www.youtube.com/embed/C9YikgbEia0" title="Orange Digital Center Madagascar" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><img src="images/Crown_Blue.png" alt="" srcset="" width="60px"></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
 									<h3 class="timeline-title">Wordpress Developer (Internship)</h3>
 									<span class="company">French Tech Antananarivo May 2022 - Jul 2022</span>
 								</div>
@@ -194,18 +208,18 @@
 								</div>
 							</div>
 						</li>
-						<!-- <li class="animate-box timeline-unverted">
+						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><img src="images/Crown_Yellow.png" alt="" srcset="" width="60px"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Graduation</h3>
-									<span class="company">College Name - 1994 - 1998</span>
+									<h3 class="timeline-title">Introduction to Mobile Development</h3>
+									<span class="company">Orange Digital Center Madagascar - March 2022</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>Concept and basics of mobile development.</p>
 								</div>
 							</div>
-						</li> -->
+						</li>
 			    	</ul>
 				</div>
 			</div>
