--- a/index.html
+++ b/index.html
@@ -135,6 +135,36 @@
 								<div class="timeline-panel">
 									<div class="timeline-heading">
 										<h3 class="timeline-title">
+											Web Developer (Freelancing)
+										</h3>
+										<span class="company">Feb 2025 – Present</span>
+									</div>
+									<div class="timeline-body">
+										<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
+									</div>
+								</div>
+							</li>
+							<li class="animate-box timeline-inverted">
+								<div class="timeline-badge"><img src="images/Crown_Blue.png" alt="" srcset=""
+										width="60px"></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h3 class="timeline-title">
+											Expert Shopify (Freelancing)
+										</h3>
+										<span class="company">Jan 2025 – Feb 20254</span>
+									</div>
+									<div class="timeline-body">
+										<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p> -->
+									</div>
+								</div>
+							</li>
+							<li class="animate-box timeline-unverted">
+								<div class="timeline-badge"><img src="images/Crown_Blue.png" alt="" srcset=""
+										width="60px"></div>
+								<div class="timeline-panel">
+									<div class="timeline-heading">
+										<h3 class="timeline-title">
 											Ingénieur d'études en développement web
 										</h3>
 										<span class="company">VIVETIC - Aug 2022 - Present</span>
