--- a/index.html
+++ b/index.html
@@ -41,17 +41,20 @@
 <body>
 	<div class="fh5co-loader"></div>
 	<div id="page">
-		<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner"
-			style="background-image:url(images/norma2d-insomnia2-final.gif);" data-stellar-background-ratio="0.5">
+		<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner">
+			<video autoplay muted loop playsinline id="bg-video"
+				style="position:absolute; top:0; left:0; width:100%; height:100%; object-fit:cover; z-index:-1;">
+				<source src="city-at-night-katana-zero-pixel-moewalls-com.mp4" type="video/mp4">
+			</video>
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center">
 						<div class="display-t js-fullheight">
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-								<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
-								<h1><span>Fiderana Ny Avo RAMAHAFENOSOA</span></h1>
-								<h3><span>Web/CMS Developer</span></h3>
+								<!-- <div class="profile-thumb" style="background: url(images/user-3.jpg);"></div> -->
+								<h1 class="neon-glow"><span>Fiderana Ny Avo R.</span></h1>
+								<h3 class="neon-glow"><span>Web/CMS Developer</span></h3>
 								<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://www.facebook.com/fiderananyavo.ramahafenosoa"
@@ -70,6 +73,7 @@
 				</div>
 			</div>
 		</header>
+
 		<div id="fh5co-about" class="animate-box">
 			<div class="container">
 				<div class="row">
